--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -3,16 +3,26 @@ $secondary:#961A1A;
 
 @import "~bootstrap";
 
-#nav {
-  padding: 30px;
 
-  a {
+  .routeItem {
+    min-height: 100vh;
     font-weight: bold;
-    color: #2c3e50;
+    color: $primary;
 
     &.router-link-exact-active {
       background-color: lightgray;
       color: $secondary;
     }
+
+
   }
+
+footer{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: lightgray;
+  color:$secondary;
+  width: 100%;
+  position: relative;
+  margin-top: calc(100vh - 619px);
 }
