--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -20,8 +20,8 @@ $secondary:#961A1A;
 footer{
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: lightgray;
-  color:$secondary;
+  background-color: $secondary;
+  color:white;
   width: 100%;
   position: relative;
   margin-top: calc(100vh - 619px);
