--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -3,6 +3,10 @@ $secondary:#961A1A;
 
 @import "~bootstrap";
 
+.work-sans {
+  font-family: "Work Sans", sans-serif;
+}
+
 
   .routeItem {
     min-height: 100vh;
